# lavacao-express

./: README.md  pyproject.toml
backend/: README.md  base-parmission.json  pyproject.toml
backend/database/doc/: lavacao-espress.mwb.bak
backend/database/sql/: lavacao-espress.sql
backend/docker/: Dockerfile  docker-compose.yml
backend/lavacao_express/: main.py
backend/lavacao_express/modules/user/: models.py  schemas.py
backend/lavacao_express/modules/user/models/: permissions.py  profile.py
backend/lavacao_express/modules/user/router/: account.py  auth.py
backend/lavacao_express/modules/user/schemas/: address.py  user.py
backend/lavacao_express/shared/: config.py  deps.py  utils.py
docker/: docker-compose.yml
lavacao_express/: main.py
lavacao_express/modules/user/models/: address.py  user.py
lavacao_express/modules/user/router/: auth.py
lavacao_express/routers/: appointment.py  service.py  user.py
lavacao_express/shared/: config.py  deps.py
