[project]
name = "lavacao-express"
version = "1.0.0"
description = ""
authors = [
    {name = "Giovani Liskoski Zanini",email = "giovanilzanini@hotmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-extra-types (>=2.10.3,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "phonenumbers (>=9.0.4,<10.0.0)",
    "cryptography (>=44.0.3,<45.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
